service-mesh/log-output.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
        version: latest
    spec:
      containers:
        - name: generator
          image: parthvasave/log-output:5.3
          command: ["node", "generator.js"]
          volumeMounts:
            - name: shared-data
              mountPath: /shared-data
        - name: log-output
          image: parthvasave/log-output:5.3
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet: { path: /readyz, port: 3000 }
            periodSeconds: 5
          volumeMounts:
            - name: shared-data
              mountPath: /shared-data
            - name: config
              mountPath: /etc/config
      volumes:
        - name: shared-data
          emptyDir: {}
        - name: config
          configMap:
            name: log-output-config
---
apiVersion: v1
kind: Service
metadata:
  name: log-output-svc
  namespace: exercises
spec:
  selector:
    app: log-output
  ports:
    - name: http
      port: 80
      targetPort: 3000
