service-mesh/pingpong.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
        version: latest
    spec:
      containers:
        - name: pingpong
          image: parthvasave/ping-pong:5.3
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet: { path: /readyz, port: 3000 }
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
  namespace: exercises
spec:
  selector:
    app: pingpong
  ports:
    - name: http
      port: 80
      targetPort: 3000
